# OsmTerrainTool

./: .gitignore  CMakeLists.txt  GeoJsonDelegate.qml  Main.qml  README.md  qml.qrc  settings.ini
include/: DtmReader.h  ElevationStore.h  Globals.h  RhiTextureItem.h  SettingsHandler.h
resources/maps/: README.md
resources/shaders/: color.frag  color.vert
src/: DtmReader.cpp  ElevationStore.cpp  RhiTextureItem.cpp  SettingsHandler.cpp  main.cpp
